<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Mail.Ru Parking</string>
  <string name="time_format">H:mm:ss</string>
  <string name="time_format_date">(MM/dd)</string>
  <string name="unknown">Unknown</string>

  <!-- Settings -->
  <string name="prefs_info">Info</string>
  <string name="prefs_info_details">Data details</string>
  <string name="prefs_info_about">About</string>

  <string name="prefs_config">Settings</string>
  <string name="prefs_config_update_title">Refresh mode</string>
  <string name="prefs_config_update_manual">Manual</string>
  <string name="prefs_config_update_auto">Auto</string>
  <string name="prefs_config_update_smart">Smart</string>

  <string name="prefs_config_click_title">Tap on widget</string>
  <string name="prefs_config_click_navigator">Show navigator</string>
  <string name="prefs_config_click_update">Refresh data</string>
  <string name="prefs_config_click_details">Show details</string>
  <string name="prefs_config_click_settings">Settings</string>

  <string name="prefs_config_doubletap_title">Double tap on widget</string>

  <string name="prefs_config_time_format_title">Date format</string>
  <string name="prefs_config_time_format_none">None</string>
  <string name="prefs_config_time_format_time">Time</string>
  <string name="prefs_config_time_format_date">Date and time</string>

  <!-- Enter place -->
  <string name="floor_format">Floor -%1$d\nSide %2$s</string>
  <string name="floor_settings">Settings</string>
  <string name="floor_ok">OK</string>
  <string name="floor_invalid">Place not found</string>
  <string name="floor_leave">Leave</string>

  <!-- Data details -->
  <string name="info_last_title">Last fetched data</string>
  <string name="info_last_fetch">Fetched at %s</string>
  <string name="info_last_refresh">Refreshed at %s</string>
  <string name="info_last_places">Free places: %d</string>
  <string name="info_last_data">Data:</string>
  <string name="info_refresh_now">Refresh now</string>
  <string name="info_refresh_failed">Failed to fetch data</string>

  <!-- About screen -->
  <string name="about_title">About…</string>
  <string name="about_version">Version: %s</string>
  <string name="about_author">Author: Alexander Marchuk\na.marchuk@corp.mail.ru or kalmar.trash@mail.ru</string>
  <string name="about_full_page">Full page: p.corp.mail.ru</string>
  <string name="about_github">Source code: www.github.com/trashkalmar/MrParkingNavigator</string>

  <!-- SmartWatch strings -->
  <string name="sw_title">@string/app_name</string>
  <string name="sw_floor_format">Floor -%1$d, side %2$s</string>
  <string name="sw_set_place">Set place</string>
  <string name="sw_refresh">Refresh</string>
  <string name="sw_leave">@string/floor_leave</string>
  <string name="sw_show">Show</string>

  <!-- Non-translatable strings -->
  <string name="build_date">11-FEB-2014</string>
  <string name="prefs_key_update_mode">update_policy</string>
  <string name="prefs_key_click_action">click_action</string>
  <string name="prefs_key_doubletap_action">doubletap_action</string>
  <string name="prefs_key_time_format">time_format</string>
</resources>