<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:padding="16dp">
  <TextView style="@style/counter_label"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:background="@drawable/widget"/>

  <TextView android:id="@+id/version"
            style="@style/def_label"/>

  <TextView style="@style/def_label"
            android:text="@string/about_author"
            android:autoLink="all"/>

  <TextView style="@style/def_label"
            android:text="@string/about_github"
            android:autoLink="all"/>

  <TextView style="@style/def_label"
            android:autoLink="web"
            android:text="@string/about_full_page"/>
</LinearLayout>